# floci-ui

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.floci.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/middleware/: audit.py
backend/app/models/: api_key.py  audit.py  instance.py  user.py
backend/app/routers/: api_keys.py  audit.py  auth.py  config.py  instances.py  monitoring.py  services.py  system.py  users.py
backend/app/routers/resources/: acm.py  apigw.py  apigwv2.py  appconfig.py  appsync.py  athena.py  autoscaling.py  awsconfig.py  backup.py  base.py  bedrock.py  cfn.py  cloudfront.py  cloudmap.py  codebuild.py  codedeploy.py  cognito.py  costexplorer.py  dynamodb.py  ec2.py  ecr.py  ecs.py  eks.py  elasticache.py  elbv2.py  eventbridge.py  firehose.py  glue.py  iam.py  kinesis.py  kms.py  lambda_.py  msk.py  neptune.py  opensearch.py  pricing.py  rds.py  route53.py  s3.py  secrets.py  (+10 more)
backend/app/schemas/: auth.py  config.py  instance.py  user.py
backend/app/services/: auth_service.py  floci_client.py  instance_service.py  service_catalog.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_instances.py  test_monitoring.py  test_phase7.py  test_rbac.py  test_resources.py  test_services.py  test_users.py
features/: 01-foundation.md  02-instance-manager.md  03-configuration-manager.md  04-service-control.md  (+3 more)
(+114 files in other folders)
